template/824_out.txt
template$ g++ 840_complexcls.cpp 824_main.cpp 824_myArray.cpp
In file included from 824_main.cpp:4:
824_myArray.h:68:60: warning: friend declaration ‘bool operator==(const myArray<T>&, const myArray<T>&)’ declares a non-template function [-Wnon-template-friend]
   68 |   friend bool operator==(const myArray& a, const myArray& b);
      |                                                            ^
824_myArray.h:68:60: note: (if this is not what you intended, make sure the function template has already been declared and add <> after the function name here) 
824_main.cpp: In function ‘void f1()’:
824_main.cpp:19:30: error: expected ‘;’ before ‘myArray’
   19 |     cout << "d2 == d" << endl
      |                              ^
      |                              ;
   20 |   myArray<double> b;
      |   ~~~~~~~                     
824_main.cpp:21:10: error: ‘b’ was not declared in this scope
   21 |   cin >> b ;
      |          ^
template$ 
